--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,28 @@
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <figure>
+      <img src="https://www.roptimumtechnologies.com/wp-content/uploads/2018/06/blog-icon.png" alt="logo">
+    </figure>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-          <li class="nav-item">
-            <a class="nav-link active" [routerLink]="['/blog']">Blog</a>
-          </li>
+        <li class="nav-item ml-5">
+          <a class="nav-link active" [routerLink]="['/blog']">Blog</a>
+        </li>
 
-          <li class="nav-item">
-            <a class="nav-link ml-5" href="#" [routerLink]="['/new']">Add post</a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link ml-5" href="#" [routerLink]="['/new']">Add post</a>
+        </li>
 
-        </ul>
-      </div>
+      </ul>
     </div>
-  </nav>
-
+  </div>
+</nav>
+<div class="container mt-4">
   <router-outlet></router-outlet>
 </div>
