--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -4,9 +4,17 @@ form{
 }
 
 .text{
+    width: 100%;
     height: 10em;
+    position: relative;
 }
 
+div .text p{
+    position: absolute;
+    right: 0;
+}
+
+
 select{
-    border-radius: 15%;
+    border-radius: 12%;
 }
