Añadido color rojo a los inputs cuando estos son inválidos

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -19,3 +19,11 @@ div .text p{
 select{
     border-radius: 12%;
 }
+
+input.ng-invalid.ng-touched{
+    border-color: tomato;
+}
+
+.error{
+    color: tomato;
+}
