--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,1 +1,8 @@
-<p>blog works!</p>
+<div *ngFor="let post of posts">
+    <figure>
+        <img [src]="post.image" alt="usericon">
+    </figure>
+    <h3>{{post.title}}</h3>
+    <p maxlength="50">{{post.text}}</p>
+    <p>#{{post.category}} {{post.date}}</p>
+</div>
