--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,8 +1,15 @@
-<div *ngFor="let post of posts">
-    <figure>
-        <img [src]="post.image" alt="usericon">
-    </figure>
-    <h3>{{post.title}}</h3>
-    <p maxlength="50">{{post.text}}</p>
-    <p>#{{post.category}} {{post.date}}</p>
-</div>
+<div class="borderblack" *ngFor="let post of posts">
+    <div class="ml-3">
+        <div>
+            <figure class="borderblack mt-2">
+                <img [src]="post.image" alt="usericon">
+            </figure>
+            <h4 class="ml-3">{{post.author}}</h4>
+        </div>
+        <h3>{{post.title}}</h3>
+        <p maxlength="50">{{post.text}}</p>
+        <div>
+            <p class="borderblack ml-2">#{{post.category}}</p>
+            <p class="ml-3">{{post.date |date: 'dd/mm/yyyy'}}</p>
+        </div>
+    </div>
