--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -4,10 +4,23 @@
 }
 
 img{
-    width: 5em;;
+    width: 5em;
+    height: 5em;
+    margin: 2px 2px;
 }
 
 div div div{
     display: flex;
     align-items: center;
+    position: relative;
+}
+
+.category{
+    padding: 0.3em;
+    cursor: pointer;
+}
+
+.date{
+    position: absolute;
+    right: 0;
 }
