--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,15 @@
+<div>
+    <h5>Filter by category:</h5>
+    <select class="mb-3" (change)="filter($event)">
+        <option value="none"></option>
+        <option value="humor">Humor</option>
+        <option value="news">News</option>
+        <option value="oldtimes">Old times</option>
+        <option value="movies">Movies</option>
+        <option value="travel">Travel</option>
+    </select>
+</div>
+
 <div class="borderblack mt-3" *ngFor="let post of posts">
     <div class="ml-3">
         <div>
