--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form">
+<form [formGroup]="form" (ngSubmit)="newPost()">
 
     <div class="form-group">
         <label>Title</label>
