Fecha añadida a post recogido por formulario

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -14,7 +14,7 @@
     <div class="ml-3">
         <div>
             <figure class="borderblack mt-2">
-                <img [src]="post.image" alt="usericon">
+                <img [src]="post.image" alt="icon">
             </figure>
             <h4 class="ml-3">{{post.author}}</h4>
         </div>
