--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <li class="nav-item ml-5">
-          <a class="nav-link active" [routerLink]="['/blog']">Blog</a>
+          <a class="nav-link" [routerLink]="['/blog']">Blog</a>
         </li>
 
         <li class="nav-item">
